<?xml version="1.0"?>
<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.kendar.protocol</groupId>
    <artifactId>protocol-master</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>protocol-common</module>
        <module>protocol-test</module>
        <module>protocol-postgres</module>
        <module>protocol-mongo</module>
        <module>protocol-mysql</module>
        <module>protocol-runner</module>
        <module>protocol-amqp-091</module>
        <module>protocol-redis</module>
        <module>protocol-mqtt</module>
        <module>jacoco</module>
        <module>protocol-http</module>
        <module>sample-plugins</module>
        <module>protocol-common-jdbc</module>
    </modules>

    <properties>
        <revision>2.3.2</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.source>17</maven.compiler.source>
        <testcontainers.version>1.20.1</testcontainers.version>
        <testcontainers.redis.version>1.6.4</testcontainers.redis.version>
        <junit.jupiter.version>RELEASE</junit.jupiter.version>
        <mybatis.version>3.5.7</mybatis.version>
        <mysql.version>8.2.0</mysql.version>
        <postgres.version>42.7.0</postgres.version>
        <jackson.version>2.16.0</jackson.version>
        <beanutils.version>1.9.4</beanutils.version>
        <mongodb.version>4.11.0</mongodb.version>
        <snappy.version>1.1.8.4</snappy.version>
        <zstd.version>1.5.2-2</zstd.version>
        <hibernate.version>5.4.0.Final</hibernate.version>
        <amqp.client.version>5.20.0</amqp.client.version>
        <jedis.version>5.1.2</jedis.version>
        <commons.io.version>2.7</commons.io.version>
        <commons.lang3.version>3.12.0</commons.lang3.version>
        <commons.text.version>1.10.0</commons.text.version>
        <pl4j.version>3.12.1</pl4j.version>
        <jaxb.api.version>2.3.0</jaxb.api.version>
        <apache.http.version>4.5.13</apache.http.version>
        <json.schema.validator.version>1.0.66</json.schema.validator.version>
        <pl4j.version>3.12.1</pl4j.version>
        <bouncycastle.version>1.68</bouncycastle.version>
        <commons.fileupload.version>1.3.3</commons.fileupload.version>
        <guava.version>31.1-jre</guava.version>
        <swagger.version>2.2.1</swagger.version>
        <assembly.plugin.version>3.7.1</assembly.plugin.version>
        <deploy.plugin.version>3.1.3</deploy.plugin.version>
        <surfire.plugin.version>3.5.2</surfire.plugin.version>
        <compiler.plugin.version>3.13.0</compiler.plugin.version>
        <antrun.plugin.version>3.1.0</antrun.plugin.version>
        <aircompressor.version>3.2</aircompressor.version>
        <reflection.version>0.10.2</reflection.version>
        <logback.version>1.4.8</logback.version>
        <sl4j.version>2.0.7</sl4j.version>
        <jte.version>3.1.16</jte.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <repositories>

        <!--<repository>
            <id>kendar</id>
            <name>Kendar Repository</name>
            <url>https://maven.kendar.org/maven2/releases</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>

        <repository>
            <id>kendar2</id>
            <name>Kendar Repository2</name>
            <url>https://maven.kendar.org/maven2/snapshots</url>
            <layout>default</layout>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>-->
        <repository>
            <id>central2</id>
            <name>Central Repository2</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <!-- https://repo.maven.apache.org/maven2 -->
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central3</id>
            <name>Central Repository3</name>
            <url>https://repo1.maven.org/maven2</url>
            <!-- https://repo.maven.apache.org/maven2 -->
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <extensions>
            <extension>
                <artifactId>wagon-ftp</artifactId>
                <groupId>org.apache.maven.wagon</groupId>
                <version>3.5.1</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surfire.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <configuration>
                    <includes>
                        <include>org/kendar/**</include>
                    </includes>

                    <excludes>
                        <exclude>org/kendar/server/**</exclude>
                        <exclude>org/kendar/tests/**</exclude>
                        <exclude>org/kendar/samples/**</exclude>
                        <exclude>**/*Constant*.*</exclude>
                        <exclude>**/*Sample*.*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>agent-for-ut</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>releases.ftp</id>
            <url>ftp://maven.kendar.org/maven2/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots.ftp</id>
            <url>ftp://maven.kendar.org/maven2/snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>
</project>